--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <ul class="main-menu-list  list">  
                         <li class="box-style">
                                 <div class="icon-container">
-                                    <svg class="icon-logo-style" wight="70" height="70">
+                                    <svg class="icon-logo-style" width="70" height="70">
                                         <use href="./image/sprite.svg#icon-antenna"></use>
                                     </svg></div>
                             <h3 class="main-menu-item">Внимание к деталям</h3>
@@ -65,7 +65,7 @@
 
                         <li class="box-style">
                                 <div class="icon-container">
-                                        <svg class="icon-logo-style" wight="70" height="70">
+                                        <svg class="icon-logo-style" width="70" height="70">
                                             <use href="./image/sprite.svg#icon-clock"></use>
                                         </svg></div>
                             <h3 class="main-menu-item">Пунктуальность</h3>
@@ -76,7 +76,7 @@
                     
                         <li class="box-style">
                             <div class="icon-container">
-                                    <svg class="icon-logo-style" wight="70" height="70">
+                                    <svg class="icon-logo-style" width="70" height="70">
                                         <use href="./image/sprite.svg#icon-diagram"></use>
                                     </svg></div>
                                 
@@ -87,7 +87,7 @@
 
                         <li class="box-style">
                                     <div class="icon-container">
-                                            <svg class="icon-logo-style" wight="70" height="70">
+                                            <svg class="icon-logo-style" width="70" height="70">
                                                 <use href="./image/sprite.svg#icon-astronaut"></use>
                                             </svg></div>
                             <h3 class="main-menu-item">Современные технологии</h3>
@@ -153,7 +153,7 @@
                                 </li>
                                 <li class="social-list_item">
                                     <a href="" class="social-list_item-link social-list_item-link_linkedin">
-                                        <svg class="social-list_icon"width="20" height="20">
+                                        <svg class="social-list_icon" width="20" height="20">
                                             <use href="./image/sprite.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
