--- a/index.html
+++ b/index.html
@@ -368,8 +368,7 @@
     <div class="modal">
         <button type="button" class="modal-close-button" data-modal-close>
             <svg class="modal-close-button-icon" width="11" height="11">
-                <use href="/image/sprite.svg#icon-close-icon" >
-
+                <use href="./image/sprite.svg#icon-close-icon" >
             </use></svg>
 
 
